# google-coral-micro-object-detection

./: .gitignore  README.md
firmware/image-collection-http/: CMakeLists.txt  README.md  index.html  main.cc
firmware/object-detection-http/: CMakeLists.txt  README.md  index.html  main.cc  metadata.h  model_int8_edgetpu.tflite
mechanical/bucket/: xrp-bucket-Body.stl  xrp-bucket.FCStd
models/: ei-xrp-bucket-delivery.lite  ei-xrp-bucket-delivery_edgetpu.tflite  float_ckpt.index  metadata.hpp  metadata.json  model_int8.tflite
notebooks/: mediapipe-object-detection-learning.ipynb  tflite-runtime-test-object-detection.ipynb
obj-det-http/: CMakeLists.txt  coralmicro  main.cc
obj-det-http/web/: coral_micro_camera.html  hello.html
